refactor : Github CI/CD
- rust.yml : Update cargo lines to compile and test in multi-threaded
- docker-image.yml : Update for Auto-Deploy to my AWS ec2

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Rust CI
 
 on:
   push:
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --verbose -j
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose -j
