--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,19 +15,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Build Docker image
+        run: |
+          docker compose build
+          
+      - name: Push Docker image
+        run: |
+          docker compose push
+
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.AWS_EC2_KEY }}
 
-      - name: Run CI/CD.sh on EC2
+      - name: CD on EC2
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }} "
             cd /home/${{ secrets.AWS_EC2_USER }}/api.movingju.com/Server-O3 && 
             git fetch --all
             git reset --hard origin/main
-            docker system prune -af
-            docker volume prune -f
-            docker compose build server-o3
+            docker compose pull server-o3
             docker compose up -d server-o3
           "
