--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,6 @@
 name: Docker Image CD
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_run:
     workflows: ["Rust CI"]
     types:
@@ -10,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.head_branch == 'main' }}
+    if: ${{ github.event.workflow_run.head_branch == 'main' && github.event.workflow_run.conclusion == 'success' }}
     environment: aws
     runs-on: ubuntu-latest
 
@@ -25,12 +23,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       # - name: Build Docker image
-      #   run: |
-      #     docker compose build
+      #   run: docker compose build
           
       # - name: Push Docker image
-      #   run: |
-      #     docker compose push
+      #   run: docker compose push
 
       # - name: Set up SSH
       #   uses: webfactory/ssh-agent@v0.7.0
