--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.head_branch == 'main' && github.event.workflow_run.conclusion == 'success' }}
     environment: aws
     runs-on: ubuntu-latest
 
@@ -21,25 +22,23 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
-      - name: Build Docker image
-        run: |
-          docker compose build
+      # - name: Build Docker image
+      #   run: docker compose build
           
-      - name: Push Docker image
-        run: |
-          docker compose push
+      # - name: Push Docker image
+      #   run: docker compose push
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.AWS_EC2_KEY }}
+      # - name: Set up SSH
+      #   uses: webfactory/ssh-agent@v0.7.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.AWS_EC2_KEY }}
 
-      - name: CD on EC2
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }} "
-            cd /home/${{ secrets.AWS_EC2_USER }}/api.movingju.com/Server-O3 && 
-            git fetch --all
-            git reset --hard origin/main
-            docker compose pull server-o3
-            docker compose up -d server-o3
-          "
+      # - name: CD on EC2
+      #   run: |
+      #     ssh -o StrictHostKeyChecking=no ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }} "
+      #       cd /home/${{ secrets.AWS_EC2_USER }}/api.movingju.com/Server-O3 && 
+      #       git fetch --all
+      #       git reset --hard origin/main
+      #       docker compose pull server-o3
+      #       docker compose up -d server-o3
+      #     "
