--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,9 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: check
-      run: cargo check --verbose
-    # - name: Build
-    #   run: cargo build --verbose
-    # - name: Run tests
-    #   run: cargo test --verbose
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
