--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ tokio = { version = "1.36.0", features = ["full"] }
 axum = "0.7.4"
 serde = {version = "1.0.196", features = ["derive"]}
 serde_json = "1.0.145"
-utoipa = {version = "5", features = ["axum_extras", "openapi_extensions"]}
+utoipa = {version = "5", features = ["axum_extras", "openapi_extensions", "macros"]}
 utoipa-swagger-ui = { version = "8", features = ["axum"] }
 sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres" ] }
 
@@ -32,3 +32,4 @@ anyhow = "1"
 # Safe mutable static variable
 lazy_static = "1.5.0"
 num = "0.4.3"
+async-trait = "0.1.89"
