--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,6 @@ anyhow = "1"
 # Safe mutable static variable
 lazy_static = "1.5.0"
 num = "0.4.3"
+
+# Static linking in Alpine Container
+openssl = { version = "0.10", features = ["vendored"] }
