--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ serde_json = "1.0.145"
 sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres" ] }
 
 # Generates OpenAPI doc
-aide = { version = "0.16.0-alpha.2", features = ["redoc", "swagger", "scalar", "axum-json"] }
+aide = { version = "0.16.0-alpha.2", features = ["redoc", "swagger", "scalar", "axum-json", "axum-query"] }
 schemars = { version = "1.0.4"}
 
 # Logging & Reading env files
