--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 [package]
 name = "api_movingju_com"
 version = "1.2.0"
@@ -39,8 +38,6 @@ num = "0.4.3"
 
 # Static linking in Alpine Container
 openssl = { version = "0.10", features = ["vendored"] }
-=======
-[workspace]
-members = ["crates/server", "crates/api_routes"]
-resolver = "2"
->>>>>>> develop
+
+# Routes crate
+# api_routes = { path = "../api_routes"}
